# ti_picocart

./: .gitignore  CMakeLists.txt  README.md  board.h  grom-hw.h  gromserver.c  invadersgrom.c  invadersrom.c  minimemg.c  parsecgrom.c  parsecrom.c  picocart.c  psram.c  psram.h  romserver.c  sysgrom.c
firmware/: board.h  gromserver.c  romserver.c
